Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15056

Partition pruning doesn't prune in system-versioned table

    XMLWordPrintable

Details

    Description

      create or replace table t1 (x int)
      with system versioning
      partition by system_time (
      partition p0 history,
      partition pn current);
      insert into t1 values (1);
      explain partitions select * from t1;
      

      +------+-------------+-------+------------+------+---------------+------+---------+------+------+-------------+
      | id   | select_type | table | partitions | type | possible_keys | key  | key_len | ref  | rows | Extra       |
      +------+-------------+-------+------------+------+---------------+------+---------+------+------+-------------+
      |    1 | SIMPLE      | t1    | p0,pn      | ALL  | NULL          | NULL | NULL    | NULL |    2 | Using where |
      +------+-------------+-------+------------+------+---------------+------+---------+------+------+-------------+
      

      Broken after https://github.com/MariaDB/server/commit/fbed4ca4f1fb827181074233be849665abf6091d

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              kevg Eugene Kosov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: