MDEV-15056 Partition pruning doesn't prune in system-versioned table

as_of_current_timestamp_history_part(): checks whether query has explicit or
implicit FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP clause and HISTORY partition.

mark_full_partition_used_no_parts(): do not mark HISTORY partitions when only
current system rows requested.